Fix image overflow on mobile for item pages

--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -36,3 +36,13 @@ body
 
 .table tfoot tr td
     vertical-align: middle
+
+.model-image-container
+    max-width: 100%
+    @media(min-width: 450px)
+        max-width: 75%
+        margin-left: auto
+        margin-right: auto
+    @media(min-width: 769px)
+        max-height: 450px
+        max-width: 100%
